loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:10: error: ';' expected but '{' found.
  while (!crossing()) { 
                      ^